tests/lit/globalchecks/eval_order_02.isa
// RUN: not %iii --max-errors=10 --batchmode %s | filecheck %s
// Copyright (C) 2023-2026 Intel Corporation

var X : Integer;

function WX() -> Integer
begin
    X := 1;
    return 0;
end

exception E;

function T?() -> Integer
begin
    // Note: functions that return a value cannot be noreturn
    // so we add an if statement to make it look optional
    if True then throw E; end;
    return 0;
end

function F() -> Integer
begin
    return WX() + T?();
// CHECK: Type error: expression behaviour depends on evaluation order
end
